design.css
body{
    background-color: #f0f0f0;
    font-family: 'Abel', sans-serif;
}

h1, h2, .circle {
    font-family: 'Anton', sans-serif;
}

li{
    list-style-type: none;
}

.nav-link {
    color: black;
}
.jumbotron {


}
.hero{
    
    
}

#logo {
    height: 105px;
    width: 105px;
}

#hero-text {
    font-size: 40px;
}

#bck_color {
    background-color: white;
    height: 58px;
    width: 100%;
    position: absolute;
    z-index: -2;
    margin-top: 25px;
}
.circle{
    color: white;
    font-weight: bold;
    width: 105px;
    height: 105px;
    line-height: 95px;
    border-radius: 90%;
    border: solid white 6px;
    text-align: center;
    margin-bottom: 1em;
}
#red {
    background-color: #e6563b;
}

.circle_text {

}

